fix bug & new content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<a href="#about" class="nav__link">About</a>
 							</li>
 							<li class="nav__item">
-								<a href="#services" class="nav__link">Services</a>
+								<a href="#services" class="nav__link">Skills</a>
 							</li>
 							<li class="nav__item">
 								<a href="#projects" class="nav__link">Projects</a>
@@ -58,7 +58,7 @@
 							<div class="home__data">
 								<h3 class="home__subtitle">Hello, <span>I’m</span></h3>
 								<h1 class="home__title">Dzmitry Lakhmitski</h1>
-								<h3 class="home__education">Front-end Developer</h3>
+								<h3 class="home__education">Front-End Developer</h3>
 								<p class="home__description">With knowledge in web development. I offer the best projects resulting
 									in quality work.</p>
 								<div class="home__button-block">
@@ -121,9 +121,7 @@
 						<h3 class="section__subtitle">My <span>Intro</span></h3>
 						<h2 class="section__title">About Me</h2>
 						<p class="about__description">
-							Frontend developer, I create web pages adaptive, responsive, cross-browser layout of web pages, landing pages, product cards, correction and refinement of existing web pages, I have years of
-							experience and many clients are happy with the
-							projects carried out.
+							As a frontend developer, I'm proficient in creating web pages with adaptive, responsive and cross-browser layouts. I'm experienced in designing and optimizing various web elements, including landing pages and product cards. Having delivered many successful projects, I have a strong base of satisfied clients.
 						</p>
 						<div class="about__button-block">
 							<a href="#contact" class="button">Contact Me</a>
@@ -166,23 +164,22 @@
 					</div>
 				</div>
 			</section>
-			<section class="skills">
+			<section id="services" class="skills">
 				<div class="skills__container container-grid">
 					<div class="skills__data">
 						<h3 class="section__subtitle">Favorite <span>Skills</span></h3>
 						<h2 class="section__title">My Skills</h2>
 						<p class="skills__description">
-							See fully what skills I have and perform,
-							to develop the projects for you.
+							Observe the complete range of my skills that enable me to develop and deliver exactly what you need.
 						</p>
 						<div class="home__button-block">
-							<a href="#projects" class="button">See Projects</a>
+							<a href="#projects" class="button">Recent Projects</a>
 						</div>
 					</div>
 					<div class="skills__content">
 						<ol class="skills__group">
-							<li class="skills__item">HTML & CSS</li>
 							<li class="skills__item">JavaScript</li>
+							<li class="skills__item">HTML & CSS</li>
 							<li class="skills__item">Bootstrap</li>
 							<li class="skills__item">React</li>
 							<li class="skills__item">PHP</li>
@@ -196,7 +193,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="services" class="services">
+			<section  class="services">
 				<div class="services__container container-grid">
 					<div class="sectition-services__block">
 						<h3 class="section__subtitle">My <span>Services</span></h3>
@@ -205,17 +202,26 @@
 					<div class="services-block">
 						<article class="services__card">
 							<i class="ri-layout-3-line"></i>
-							<h2 class="services__title">Front-end Developer</h2>
-							<p class="services__description">
-								Development of custom web pages. Use of modern technologies. Layout of both new projects and revision of existing projects. Landing page, online stores.
-							</p>
+							<h2 class="services__title">Front-End Developer</h2>
+							<ul>
+								<li>Development of custom web pages;</li>
+								<li>Use of modern technologies;</li>
+								<li>Layout of both new projects and revision of existing projects;</li>
+								<li>Landing pages, online stores.</li>
+							</ul>
 						</article>
 						<article class="services__card">
 							<i class="ri-pages-line"></i>
 							<h2 class="services__title">Web Developer</h2>
 							<p class="services__description">
-								Adding new pages WordPress, Bitrix, editing existing projects, fixing scripts, adding new functionality.
-								Working with templates, updating PHP versions
+								<ul>
+									<li>Adding new pages in WordPress, Bitrix;</li>
+									<li>Editing existing projects;</li>
+									<li>Fixing scripts;</li>
+									<li>Adding new functionality;</li>
+									<li>Working with templates;</li>
+									<li>Updating PHP versions.</li>
+								</ul>
 							</p>
 						</article>
 					</div>
@@ -337,7 +343,7 @@
 							Dzmitry <span>Lakhmitski</span>
 						</h1>
 						<h2 class="footer__education">
-							Front-end Developer
+							Front-End Developer
 						</h2>
 					</div>
 					<div class="footer__social">
