--- a/index.html
+++ b/index.html
@@ -233,6 +233,15 @@
 					<h2 class="section__title">Recent Projects</h2>
 					<div class="progects-block container-grid">
 						<article class="projects__card">
+							<picture><source srcset="" type="image/webp"><img src="img/coffee.png" alt="progect image"></picture>
+							<div class="projects__modal">
+								<span class="projects__subtitle">Web</span>
+								<h2 class="projects__title"><span>Modern website</span> <br> Applied technologies: html, css, scss, gulp, webpack (Grid, FlexBox, :hover effects, transition, clamp, calc) responsive design.</h2>
+								<a href="https://dimkabit.github.io/coffe/" target="_blank" class="projects__button">View demo <i class="ri-external-link-line"></i></a>
+								<a href="https://www.figma.com/file/IiBayFKsJyRsFFRY3GVK4j/Coffee?node-id=1%3A4&mode=dev" target="_blank" class="projects__button">View design <i class="ri-pen-nib-line"></i></i></a>
+							</div>
+						</article>
+						<article class="projects__card">
 							<picture><source srcset="img/Desktop1.webp" type="image/webp"><img src="img/Desktop1.png" alt="progect image"></picture>
 							<div class="projects__modal">
 								<span class="projects__subtitle">Web</span>
