add new project in portfolio

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 						<ol class="skills__group" start="5">
 							<li class="skills__item">Git & GitHub</li>
 							<li class="skills__item">WordPress, Bitrix</li>
+							<li class="skills__item">ChatGPT</li>
 							<li class="skills__item">Figma</li>
 							<li class="skills__item">Sketch</li>
 						</ol>
@@ -239,6 +240,15 @@
 								<h2 class="projects__title"><span>Modern website</span> <br> Applied technologies: html, css, scss, gulp, webpack (Grid, FlexBox, :hover effects, transition, clamp, calc) responsive design.</h2>
 								<a href="https://dimkabit.github.io/coffe/" target="_blank" class="projects__button">View demo <i class="ri-external-link-line"></i></a>
 								<a href="https://www.figma.com/file/IiBayFKsJyRsFFRY3GVK4j/Coffee?node-id=1%3A4&mode=dev" target="_blank" class="projects__button">View design <i class="ri-pen-nib-line"></i></i></a>
+							</div>
+						</article>
+						<article class="projects__card">
+							<picture><source srcset="" type="image/webp"><img src="img/alma.png" alt="progect image"></picture>
+							<div class="projects__modal">
+								<span class="projects__subtitle">Web</span>
+								<h2 class="projects__title"><span>Modern website</span> <br> Applied technologies: html, css, scss, gulp, webpack (Grid, FlexBox, :hover effects, transition, clamp, calc) responsive design.</h2>
+								<a href="https://dimkabit.github.io/alma/" target="_blank" class="projects__button">View demo <i class="ri-external-link-line"></i></a>
+								<a href="https://www.figma.com/file/WPO1G9hZkXwN3sQ5YeZlXh/ALMA-(Copy)?mode=dev" target="_blank" class="projects__button">View design <i class="ri-pen-nib-line"></i></i></a>
 							</div>
 						</article>
 						<article class="projects__card">
