--- a/index.html
+++ b/index.html
@@ -180,11 +180,12 @@
 						<ol class="skills__group">
 							<li class="skills__item">JavaScript</li>
 							<li class="skills__item">HTML & CSS</li>
+							<li class="skills__item">SASS</li>
 							<li class="skills__item">Bootstrap</li>
 							<li class="skills__item">React</li>
 							<li class="skills__item">PHP</li>
 						</ol>
-						<ol class="skills__group" start="5">
+						<ol class="skills__group" start="7">
 							<li class="skills__item">Git & GitHub</li>
 							<li class="skills__item">WordPress, Bitrix</li>
 							<li class="skills__item">ChatGPT</li>
