--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 					<h3 class="section__subtitle">Get In <span>Touch</span></h3>
 					<h2 class="section__title">Contact Me</h2>
 					<div class="contact-block container-grid">
-						<form action="" class="contact__form" id="contact-form">
+						<form action="sendmail/sendmail.php" method="post" class="contact__form" id="contact-form">
 							<div class="contact__group">
 								<input type="text" name="user_name" required placeholder="Enter your name" class="contact__input">
 								<input type="email" name="user_email" required placeholder="Enter your email" class="contact__input">
@@ -390,7 +390,22 @@
 	<script src="js/scrollreveal.min.js"></script>
 	<script src="js/app.min.js"></script>
 	<script src="js/scripts.js"></script>
+	<script>
+		document.getElementById('contact-form').addEventListener('submit', async function (event) {
+	event.preventDefault();
 
+	let formData = new FormData(this);
+	
+	let response = await fetch(this.action, {
+		 method: 'POST', // Убедитесь, что сервер принимает POST-запрос
+		 body: formData
+	});
+
+	let result = await response.json();
+	
+	document.getElementById('contact-message').textContent = result.message;
+});
+</script>
 </body>
 
 </html>
