--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 		</footer>
 		<a href="#" class="scrollup" id="scroll-up"><i class="ri-arrow-up-line"></i></a>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script> -->
 	<script src="js/scrollreveal.min.js"></script>
 	<script src="js/app.min.js"></script>
 	<script src="js/scripts.js"></script>
