--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	
 </head>
 
 <body>
@@ -342,14 +342,14 @@
 					<h3 class="section__subtitle">Get In <span>Touch</span></h3>
 					<h2 class="section__title">Contact Me</h2>
 					<div class="contact-block container-grid">
-						<form action="sendmail/sendmail.php" method="post" class="contact__form" id="contact-form">
+						<form action="" class="contact__form" id="contact-form">
 							<div class="contact__group">
-								<input type="text" name="user_name" required placeholder="Enter your name" class="contact__input">
-								<input type="email" name="user_email" required placeholder="Enter your email" class="contact__input">
+								<input type="text" id="user_name" name="user_name" required placeholder="Enter your name" class="contact__input">
+								<input type="email" id="user_email" name="user_email" required placeholder="Enter your email" class="contact__input">
 							</div>
-							<textarea name="user_project" required placeholder="Enter your message" class="contact__input"></textarea>
+							<textarea name="user_project" id="user_project" required placeholder="Enter your message" class="contact__input"></textarea>
 							<p class="contact__message" id="contact-massage"></p>
-							<button type="submit" class="button contact__button">Send Message</button>
+							<button type="submit" class="button contact__button" >Send Message</button>
 						</form>
 					</div>
 				</div>
@@ -387,25 +387,18 @@
 		<a href="#" class="scrollup" id="scroll-up"><i class="ri-arrow-up-line"></i></a>
 	</div>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script> -->
+	 <script src="js/email.min.js"></script>
 	<script src="js/scrollreveal.min.js"></script>
 	<script src="js/app.min.js"></script>
 	<script src="js/scripts.js"></script>
-	<script>
-		document.getElementById('contact-form').addEventListener('submit', async function (event) {
-		event.preventDefault();
+	<script type="text/javascript">
+		(function(){
+			emailjs.init({
+			  publicKey: "ZMPwEok5ABBA4iHG8",
+			});
+		})();
+	</script>
 
-		let formData = new FormData(this);
-		
-		let response = await fetch(this.action, {
-			method: 'POST', // Убедитесь, что сервер принимает POST-запрос
-			body: formData
-		});
-
-		let result = await response.json();
-		
-		document.getElementById('contact-message').textContent = result.message;
-	});
-</script>
 </body>
 
 </html>
