--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+	<script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,13 +68,13 @@
 							</div>
 							<div class="home__social">
 								<a href="https://github.com/Dimkabit" target="_blank" class="home__social-link">
-									<i class="ri-github-fill"></i>
+									<iconify-icon icon="bi:github" width="24" height="24"></iconify-icon>
 								</a>
-								<a href="https://linkedin.com/in/дмитрий-лахмицкий-19271a1a4" target="_blank" class="home__social-link">
-									<i class="ri-linkedin-box-line"></i>
+								<a href="https://www.linkedin.com/in/dzmitry-lakhmitski-19271a1a4" target="_blank" class="home__social-link">
+									<iconify-icon icon="ant-design:linkedin-outlined" width="24" height="24"></iconify-icon>
 								</a>
 								<a href="https://t.me/Damitrij" target="_blank" class="home__social-link">
-									<i class="ri-telegram-fill"></i>
+									<iconify-icon icon="jam:telegram" width="24" height="24"></iconify-icon>
 								</a>
 							</div>
 						</div>
@@ -368,16 +369,16 @@
 					</div>
 					<div class="footer__social">
 						<a href="https://github.com/Dimkabit" target="_blank" class="footer__social-link">
-							<i class="ri-github-fill"></i>
+							<iconify-icon icon="bi:github" width="24" height="24"></iconify-icon>
 						</a>
 						<a href="https://instagram.com/lakhmitskidima?igshid=MzNlNGNkZWQ4Mg==" target="_blank" class="footer__social-link">
-							<i class="ri-instagram-line"></i>
+							<iconify-icon icon="lets-icons:insta" width="24" height="24"></iconify-icon>
 						</a>
-						<a href="https://linkedin.com/in/дмитрий-лахмицкий-19271a1a4" target="_blank" class="footer__social-link">
-							<i class="ri-linkedin-box-line"></i>
+						<a href="https://www.linkedin.com/in/dzmitry-lakhmitski-19271a1a4" target="_blank" class="footer__social-link">
+							<iconify-icon icon="ant-design:linkedin-outlined" width="24" height="24"></iconify-icon>
 						</a>
 						<a href="https://t.me/Damitrij" target="_blank" class="footer__social-link">
-							<i class="ri-telegram-fill"></i>
+							<iconify-icon icon="jam:telegram" width="24" height="24"></iconify-icon>
 						</a>
 					</div>
 					<span class="footer__copy">&#169; All rights reserved</span>
