--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 						</ul>
 						<!--close button-->
 						<div class="nav__close" id="nav-close">
-							<i class="ri-close-line"></i>
+							<iconify-icon icon="line-md:menu-to-close-alt-transition" width="24" height="24"></iconify-icon>
 						</div>
 
 					</div>
 					<!--togle-button-->
 					<div class="nav__toggle" id="nav-toggle">
-						<i class="ri-menu-3-line"></i>
+						<iconify-icon icon="line-md:menu-unfold-right" width="24" height="24"></iconify-icon>
 					</div>
 				</div>
 			</div>
@@ -390,7 +390,7 @@
 	<!-- <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script> -->
 	 <script src="js/email.min.js"></script>
 	<script src="js/scrollreveal.min.js"></script>
-	<script src="js/app.min.js"></script>
+	<script src="js/app.js"></script>
 	<script src="js/scripts.js"></script>
 	<script type="text/javascript">
 		(function(){
